fixes #0026740: double scrollbars in metabar slates

--- a/src/UI/templates/default/MainControls/metabar.less
+++ b/src/UI/templates/default/MainControls/metabar.less
@@ -115,7 +115,7 @@
 		min-width: @il-metabar-slates-width;
 	}
 	max-height: 90vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 	right: 0;
 
 	top: @il-metabar-entry-height;
